@@ -1454,5 +1454,6 @@ module core_module = {
    NULL,			/* pre-run fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
