@@ -186,5 +186,6 @@ module MODULE_VAR_EXPORT browser_module = {
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
