@@ -280,5 +280,6 @@ module MODULE_VAR_EXPORT access_module = {
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
