@@ -386,5 +386,6 @@ module MODULE_VAR_EXPORT alias_module = {
    fixup_redir,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
