@@ -1106,5 +1106,6 @@ module MODULE_VAR_EXPORT autoindex_module = {
    NULL,                        /* fixups */
    NULL,                        /* logger */
    NULL,                        /* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
