@@ -562,5 +562,6 @@ module MODULE_VAR_EXPORT cgi_module = {
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
