@@ -360,5 +360,6 @@ module MODULE_VAR_EXPORT digest_module = {
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
