@@ -482,5 +482,6 @@ module MODULE_VAR_EXPORT expires_module = {
    add_expires,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
