@@ -834,5 +834,6 @@ module MODULE_VAR_EXPORT imap_module = {
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
