@@ -516,5 +516,6 @@ module MODULE_VAR_EXPORT info_module = {
 	NULL,				/* fixups */
 	NULL,				/* logger */
 	NULL,				/* header parser */
-	NULL				/* child_init */
+	NULL,				/* child_init */
+	NULL			/* child_exit */
 };
