@@ -790,5 +790,6 @@ module MODULE_VAR_EXPORT config_log_module = {
    NULL,			/* fixups */
    multi_log_transaction,	/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
