@@ -2547,5 +2547,6 @@ module mime_magic_module = {
     NULL,            /* fixups */
     NULL,            /* logger */
     NULL,            /* header parser */
-    NULL	     /* child_init */
+    NULL,	     /* child_init */
+    NULL             /* child_exit */
 };
