@@ -2049,5 +2049,6 @@ module MODULE_VAR_EXPORT negotiation_module = {
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
