@@ -663,5 +663,6 @@ module MODULE_VAR_EXPORT status_module =
    NULL,			/* fixups */
    NULL,			/* logger */
    NULL,			/* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
