@@ -338,5 +338,6 @@ module userdir_module = {
    NULL,                        /* fixups */
    NULL,                        /* logger */
    NULL,                        /* header parser */
-   NULL				/* child_init */
+   NULL,			/* child_init */
+   NULL			/* child_exit */
 };
